--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pleasure to Eat - NYC Restaurant</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="./Images/favicon.png">
     <script src="https://kit.fontawesome.com/3dd7962506.js" crossorigin="anonymous"></script>
 </head>
 
